--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,6 +11,8 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
-  /* scroll-behavior: smooth; */
+@layer base {
+  body {
+    @apply bg-[#6352ff0f] ;
+  }
 }
